src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_13_lexical_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
assertion_line: 51
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "UPPER_CASE_SNAKE_CASE",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 27,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 29,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 34,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "UPPER_CASE_SNAKE_CASE",
        },
        position: Position {
            line: 2,
            column: 1,
        },
    },
]
