src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_13_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "UPPER_CASE_SNAKE_CASE",
            expression: Boolean {
                literal: false,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "UPPER_CASE_SNAKE_CASE",
        },
    },
]
