src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_14_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "timeout_ms": Integer {
                    value: 5,
                },
                "timeout_ms_copy": Integer {
                    value: 5,
                },
            },
            enclosing: None,
        },
    },
}
