src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_14_syntax_analysis.snap
---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "timeout_ms",
            expression: Integer {
                literal: 5,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "timeout_ms_copy",
            expression: Identifier {
                identifier: "timeout_ms",
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "timeout_ms_copy",
        },
    },
]
