src/tests/identifier_expression/snapshots/monkey_interpreter__tests__identifier_expression__test_identifier_expression_case_16_environment.snap
---
source: src/tests/identifier_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "arg2": Integer {
                    value: 10,
                },
                "x1": Integer {
                    value: 5,
                },
            },
            enclosing: None,
        },
    },
}
